--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap css npm extension-->
 
     <!-- Css file extension-->
-    <link rel="stylesheet" href="css-files/index.css">
+    <link rel="stylesheet" href="Public/css-files/index.css">
     <!-- Css file extension-->
 
     <!-- Google Fonts extensions-->
@@ -25,7 +25,7 @@
             <div class="col-auto min-vh-100 text-center">
                 <div class="card mt-3" style="width: 100%;">
                     <div class="card-header text-center" style="background-color: #BBDED8;">
-                       <span>To Do List</span>  <a class="justify-content-center" style="padding-left: 70%;" onclick="addToDoElementToList()"><img src="images/add-button.png" alt=""></a>
+                       <span>To Do List</span>  <a class="justify-content-center" style="padding-left: 70%;" onclick="addToDoElementToList()"><img src="Public/images/add-button.png" alt=""></a>
                       </div>
                     <ul class="list-group list-group-flush" id="todolist">
                       <li class="list-group-item" id="todo1">
@@ -39,8 +39,8 @@
         </div>
     </div>
 
-    <script src="js-files/AppListController.js"></script>
-    <script src="js-files/IoHandler.js"></script>
+    <script src="Public/js-files/AppListController.js"></script>
+    <script src="Public/js-files/IoHandler.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.js" integrity="sha512-B+gr+zLWg81qxVwvtYwKrmjvQtZKD/GGFF7jD80OfzbqFw+NsbS5faEqpCO7Q7oRw1bYi0+WLJf54j8Vm7NADw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Bootstrap css npm extension-->
