Code is commented

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                       </li>   
                     </ul>
                   </div>
+                  <!-- List download button -->
                   <button class="btn mt-3" onclick="downloadList();" style="margin-left: 0.7rem; background-color: #BBDED8;"> Download My To Do List </button>
+                  <!-- List download button -->
             </div>
         </div>
     </div>
